ubiquity (2.21.28) UNRELEASED; urgency=medium

  [ Sean Davis ]
  * bin/ubiquity-dm: Draw the ubiquity desktop with feh under
    Xfce environments (LP: #1437180)

  [ Mathieu Trudel-Lapierre ]
  * Automatic update of included source packages: partman-basicmethods
    59.

 -- Sean Davis <smd.seandavis@gmail.com>  Wed, 17 Jun 2015 00:11:15 -0400

ubiquity (2.21.27) wily; urgency=medium

  * Automatic update of included source packages: choose-mirror
    2.57ubuntu3, partconf 1.47, partman-lvm 109, preseed 1.64ubuntu3,
    tzsetup 1:0.66ubuntu1, localechooser 2.65ubuntu1.
  * debian/rules: wipe all environment when running tests, only set
    LANG to C.UTF-8 for debconf to be able to handle the Brazil
    timezones' accents.
  * d-i/sources.list: switch to wily release.

 -- Mathieu Trudel-Lapierre <mathieu-tl@ubuntu.com>  Thu, 04 Jun 2015 10:34:59 -0400

ubiquity (2.21.26) vivid; urgency=medium

  * ubiquity/plugins/ubi-console-setup.py: use untranslated keyboard
    names if translated ones do not exist LP: #1182784
  * Automatic update of included source packages: console-setup
    1.108ubuntu5.

 -- Jonathan Riddell <jriddell@ubuntu.com>  Mon, 27 Apr 2015 13:32:25 +0200

ubiquity (2.21.25) vivid; urgency=medium

  * GTK/KDE UI: Don't apply the reboot/poweroff race hack when running under
    an actual display-manager, i. e. go back to what we always did there. This
    fixes restarting the greeter after clicking "restart" at the end of
    installation. lightdm and friends do a proper shutdown already, it's just
    ubiquity-dm which is racy here.

 -- Martin Pitt <martin.pitt@ubuntu.com>  Tue, 21 Apr 2015 18:09:57 +0100

ubiquity (2.21.24) vivid; urgency=medium

  * Revert ubiquity.service changes (r6294) from previous upload. It's not
    necessary to fix proper shutdown, and broke the "Try Ubuntu" button in
    ubiquity-dm.

 -- Martin Pitt <martin.pitt@ubuntu.com>  Tue, 21 Apr 2015 09:49:16 +0100

ubiquity (2.21.23) vivid; urgency=medium
