@@ -196,11 +196,6 @@ class Wizard(BaseFrontend):
             elif isinstance(widget, gtkwidgets.StateBox):
                 label = widget.label
 
-            # If we're runing Orca, we want to be able to read labels.
-            if label:
-                label.set_property('can-focus', self.screen_reader)
-                label.set_selectable(self.screen_reader)
-
         BaseFrontend.__init__(self, distro)
         self.previous_excepthook = sys.excepthook
         sys.excepthook = self.excepthook
